[project]
name = "calcScripts_by_Ytloe"
version = "0.1.0"
description = "计算工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "requests>=2.32.4",
]

[tool.ruff]
"indent-width" = 2
"line-length" = 115

[tool.uv.workspace]
members = ["calcScripts by Ytloe"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
